# Conf_Agg

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RESTART_GUIDE.md  a_run_stage3_single.sh  check_parquet.py  config.json  docker-compose.yml  download_data.sh  env.example  final_logprobs_check.py  install_flashinfer.sh  nohup.out  output_s  pyproject.toml  quick_restart.sh  requirements.txt  restart_setup.sh  restart_setup2.sh  run.sh  run_stage3_2gpu.sh  run_test.sh  setup.sh  setup_cuda_env.sh  setup_grpo_training.sh  setup_uv.sh  test.ipynb  test.py  test_vllm_simple.py  uv.toml  vllm_servers.json
config/: config.yaml
config/data/: curation.yaml  raw_dataset.yaml
config/evaluation/: benchmarks.yaml
config/training/: lora.yaml
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_KR.md  DEPLOYMENT_NO_DOCKER.md  EXECUTION_GUIDE.md  QUICKSTART.md
grpo_trainer_lora_model_1/: adapter_config.json
output_s/: curated  generated  logs  raw
scripts/: analyze_merged_data.py  analyze_prompt_token_distribution.py  install_unsloth_dependencies.sh  merge_shards.py  quick_deploy.sh  recalculate_confidence.py  run_analyze_prompt_tokens.sh  run_full_pipeline.py  run_stage1_async.sh  stage1_generate.py  stage1_generate_async.py  stage2_curate.py  stage3_train.py  stage3_train_2.py  stage4_1_generate.py  stage4_2_analyze_token_confidence_correlation.py  stage4_2_evaluate_metrics.py  stage4_3_evaluate_aggregation.py  stage4_3_evaluate_baseline_confidence.py  stage4_comprehensive_evaluate.py  stage4_evaluate.py  upload_to_hf.py
scripts/merge_analysis/: _merge_and_analyze.py  _merge_and_analyze_0_old_parser.py  analyze_parquet_with_tokenizer.py  compare_and_merge.py  compare_overlap_and_analyze.py  (+4 more)
(+21 files in other folders)
